[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_awesome_utils"
version = "0.0.1"
description = "desc"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["__init__", "util1"]
packages = ["awesome_utils"]

[tool.setuptools.package-dir]
awesome_utils = "."
