[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_awesome_utils"
version = "0.0.1"
description = "desc"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
my_awesome_utils = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["my_awesome_utils", "my_awesome_utils.*"]
